syntax = "proto3";

package blog;

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message Post {
  int64  id         = 1;
  string title      = 2;
  string content    = 3;
  int64  author_id  = 4;
  string created_at = 5; // ISO 8601 string, например "2026-01-11T12:00:00Z"
}

message CreatePostRequest {
  string title     = 1;
  string content   = 2;
  int64  author_id = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostsRequest {}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  int64  id        = 1;
  string title     = 2;
  string content   = 3;
  int64  author_id = 4;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  int64 id = 1;
}

message DeletePostResponse {}